traefik/ingress/traefik-deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v2.3
          args:
            - --log.level=DEBUG
            - --accesslog=true
            - --api
            - --api.insecure
            - --api.dashboard
            - --entrypoints.web.address=:80
            - --entrypoints.redis.address=:6379/TCP
            - --entrypoints.sentinel.address=:26379/TCP
            - --entrypoints.postgres.address=:5432/TCP
            - --entrypoints.zookeeper.address=:2181/TCP
            - --entrypoints.kafka.address=:9092/TCP
            - --providers.kubernetesingress
            - --providers.kubernetescrd
          ports:
            - name: web
              containerPort: 80
              hostPort: 80 
            - name: admin
              containerPort: 8080
            - name: redis
              containerPort: 6379
              hostPort: 6379
            - name: postgres
              containerPort: 5432
              hostPort: 5432
            - name: sentinel
              containerPort: 26379
              hostPort: 26379
            - name: zookeeper
              containerPort: 2181
              hostPort: 2181
            - name: kafka
              containerPort: 9092
              hostPort: 9092
      nodeSelector:
        IngressProxy: "true"

---
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  ports:
    - name: web
      port: 80
    - name: admin
      port: 8080
    - name: redis
      port: 6379
      protocol: TCP
    - name: postgres
      port: 5432
      protocol: TCP
    - name: sentinel
      port: 26379
      protocol: TCP
    - name: zookeeper
      port: 2181
      protocol: TCP
    - name: kafka
      port: 9092
      protocol: TCP
  selector:
    app: traefik
