traefik/ingress/traefik-dashboard-ingress.yaml
# Declaring the user list
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: basic-auth
spec:
  basicAuth:
    secret: authsecret

---

kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: traefikingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    #traefik.ingress.kubernetes.io/router.middlewares: basic-auth

spec:
  rules:
    - host: traefik.sillycat.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: traefik
              servicePort: 8080
